[gd_scene load_steps=24 format=2]

[ext_resource path="res://assets/fonts/heading.tres" type="DynamicFont" id=1]
[ext_resource path="res://assets/images/background01.png" type="Texture" id=2]
[ext_resource path="res://screens/intro/Intro.gd" type="Script" id=3]
[ext_resource path="res://assets/images/btn.png" type="Texture" id=4]
[ext_resource path="res://assets/images/btn-hover.png" type="Texture" id=5]
[ext_resource path="res://assets/images/background02.png" type="Texture" id=6]
[ext_resource path="res://assets/images/background03.png" type="Texture" id=7]
[ext_resource path="res://assets/images/img01.png" type="Texture" id=8]
[ext_resource path="res://assets/images/img02.png" type="Texture" id=9]
[ext_resource path="res://assets/fonts/Ubuntu-Regular.ttf" type="DynamicFontData" id=10]

[sub_resource type="Animation" id=1]
resource_name = "00"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Bg00:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "01_fade"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background/Bg01:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "01_move"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background/Bg01:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 647, 560 ), Vector2( 959, 560 ) ]
}

[sub_resource type="Animation" id=6]
resource_name = "02_fade"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background/Bg02:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "02_move"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background/Bg02:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1266, 380 ), Vector2( 832, 380 ) ]
}

[sub_resource type="Animation" id=7]
resource_name = "03_move"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background/Bg03:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 1051, 598 ), Vector2( 923, 598 ) ]
}

[sub_resource type="Animation" id=2]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Bg00:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Background/Bg01:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 647, 560 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Background/Bg01:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Background/Bg02:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1266, 380 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Background/Bg02:modulate")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("Background/Bg03:position")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1051, 598 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("Background/Img01:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("Background/Img02:modulate")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("Background/Last:modulate")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}
tracks/9/type = "value"
tracks/9/path = NodePath("GoodLuck:modulate")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "good_luck"
length = 6.0
tracks/0/type = "value"
tracks/0/path = NodePath("GoodLuck:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2, 4, 6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=8]
resource_name = "img01_fadein"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background/Img01:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=9]
resource_name = "img01_fadeout"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background/Img01:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=10]
resource_name = "img02_fadein"
length = 5.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background/Img02:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=11]
resource_name = "last"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("Background/Last:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="DynamicFont" id=12]
size = 80
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 10 )

[node name="Intro" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="BgBlack" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Background" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Bg03" type="Sprite" parent="Background"]
position = Vector2( 1051, 598 )
scale = Vector2( 0.836111, 0.836111 )
texture = ExtResource( 7 )

[node name="Bg02" type="Sprite" parent="Background"]
position = Vector2( 1266, 380 )
texture = ExtResource( 6 )

[node name="Img01" type="Sprite" parent="Background"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 614, 433 )
texture = ExtResource( 8 )

[node name="Bg01" type="Sprite" parent="Background"]
position = Vector2( 647, 560 )
texture = ExtResource( 2 )

[node name="Img02" type="Sprite" parent="Background"]
modulate = Color( 1, 1, 1, 0 )
position = Vector2( 1289, 440 )
texture = ExtResource( 9 )

[node name="Last" type="ColorRect" parent="Background"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Text" type="Control" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -92.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="ColorRect" type="ColorRect" parent="Text"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )

[node name="Label" type="Label" parent="Text"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 28.0
margin_top = 2.0
margin_bottom = -2.0
custom_fonts/font = ExtResource( 1 )
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/00 = SubResource( 1 )
anims/01_fade = SubResource( 4 )
anims/01_move = SubResource( 3 )
anims/02_fade = SubResource( 6 )
anims/02_move = SubResource( 5 )
anims/03_move = SubResource( 7 )
anims/RESET = SubResource( 2 )
anims/good_luck = SubResource( 13 )
anims/img01_fadein = SubResource( 8 )
anims/img01_fadeout = SubResource( 9 )
anims/img02_fadein = SubResource( 10 )
anims/last = SubResource( 11 )

[node name="GoodLuck" type="Label" parent="."]
modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -190.0
margin_top = -45.5
margin_right = 190.0
margin_bottom = 45.5
custom_colors/font_color = Color( 1, 0.941176, 0.764706, 1 )
custom_fonts/font = SubResource( 12 )
text = "Good Luck"

[node name="Bg00" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Begin" type="Control" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -174.0
margin_top = -78.0
margin_right = -14.0
margin_bottom = -41.0
__meta__ = {
"_edit_group_": true,
"_edit_lock_": true
}

[node name="BeginBtn" type="TextureButton" parent="Begin"]
margin_right = 40.0
margin_bottom = 40.0
texture_normal = ExtResource( 4 )
texture_pressed = ExtResource( 4 )
texture_hover = ExtResource( 5 )

[node name="Label" type="Label" parent="Begin"]
margin_right = 158.0
margin_bottom = 33.0
custom_colors/font_color = Color( 1, 0.956863, 0.733333, 1 )
custom_fonts/font = ExtResource( 1 )
text = "Begin"
align = 1
valign = 1

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="button_up" from="Begin/BeginBtn" to="." method="_on_BeginBtn_button_up"]
